# Personica

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: run_evals.py
src/personica/: __init__.py  __main__.py  cli.py  config.py  consolidation.py  inspect_memory.py  jsonutil.py  llm.py  logging_setup.py  pipeline.py  prompts.py  time_context.py  tracing.py
src/personica/memory/: __init__.py  long_term.py  short_term.py
tests/: conftest.py  test_config.py  test_consolidation.py  test_jsonutil.py  test_llm.py  test_long_term.py  test_pipeline.py  test_short_term.py  test_time_context.py  test_tracing.py
